--- a/src/app/composants/formations/culture/culture.component.scss
+++ b/src/app/composants/formations/culture/culture.component.scss
@@ -519,13 +519,13 @@ ion-icon
   fill: var(--couleur-gray);
 }
 
-.langue svg{
+.culture svg{
   stroke: white;
   //color: var(--couleur-gray);
   fill: white;
 }
 
-.langue p
+.culture p
 {
   color: white;
 }
