--- a/src/app/composants/utilisateurs/ajouterUtilisateur/ajouterUtilisateur.component.html
+++ b/src/app/composants/utilisateurs/ajouterUtilisateur/ajouterUtilisateur.component.html
@@ -158,7 +158,7 @@
       <div class="contenus-container">
         <div class="contenu">
           <p style="color: black; font-weight: bold">Ajouter un nouveau utilisateur</p>
-          <p>Ces informations décriront plus en détail l'utilisateur'.</p>
+          <p>Ces informations décriront plus en détail l'utilisateur.</p>
           <div class="forms-container">
             <div class="timeline-container">
               <div class="line-container">
@@ -343,6 +343,12 @@
                         <p>Date de naissance</p>
                         <div class="preview-value">
                           <p>{{utilisateur.dateBirthday}}</p>
+                        </div>
+                      </div>
+                      <div class="preview-conatainer preview-birthDay">
+                        <p>Adresse</p>
+                        <div class="preview-value">
+                          <p>{{utilisateur.adresse}}</p>
                         </div>
                       </div>
                     </div>
