--- a/src/app/composants/formations/culture/culture.component.html
+++ b/src/app/composants/formations/culture/culture.component.html
@@ -140,7 +140,7 @@
   <main class="principal">
     <div class="en-tete">
       <div class="page-titre">
-        <p>Langue</p>
+        <p>Culturel</p>
       </div>
       <div class="recherche">
         <div class="recherche-barre">
